--- a/HEScoreMicro.UI/src/app/views/address/address.component.html
+++ b/HEScoreMicro.UI/src/app/views/address/address.component.html
@@ -1,31 +1,20 @@
 <section class="address-section">
   <div class="container py-lg-4 py-md-3 py-2">
     <h3 class="text-center mb-4">
-      {{ buildingId ? "Update" : "Create new"  }} building
+      {{ buildingId ? "Update" : "Create new" }} building
     </h3>
     <form [formGroup]="addressForm">
       <div class="row">
         <div class="col-md-6">
           <div class="input-box">
             <label class="required" for="streetAddress"> Street Address </label>
-            <input
-              formControlName="streetAddress"
-              type="text"
-              id="streetAddress"
-              placeholder="Address 1"
-            />
-            <div
-              class="errormsg"
-              *ngIf="
+            <input formControlName="streetAddress" type="text" id="streetAddress" placeholder="Address 1" />
+            <div class="errormsg" *ngIf="
                 (addressControl['streetAddress']?.touched ||
                   addressControl['streetAddress']?.dirty) &&
                 addressControl['streetAddress']?.invalid
-              "
-            >
-              <label
-                for="streetAddress"
-                class="text-danger fw-semibold position-absolute"
-              >
+              ">
+              <label for="streetAddress" class="text-danger fw-semibold position-absolute">
                 Street Address is invalid
               </label>
             </div>
@@ -33,34 +22,19 @@
         </div>
         <div class="col-md-6">
           <div class="input-box">
-            <label
-              [class]="{
+            <label [class]="{
                 required:
                   addressControl['dwellingUnitType']?.value ==
                   'Multifamily Building Unit'
-              }"
-              for="addressLine"
-            >
-              Address Line (Apartment / Unit Number)</label
-            >
-            <input
-              formControlName="addressLine"
-              type="text"
-              id="addressLine"
-              placeholder="Address Line"
-            />
-            <div
-              class="errormsg"
-              *ngIf="
+              }" for="addressLine">
+              Address Line (Apartment / Unit Number)</label>
+            <input formControlName="addressLine" type="text" id="addressLine" placeholder="Address Line" />
+            <div class="errormsg" *ngIf="
                 (addressControl['addressLine']?.touched ||
                   addressControl['addressLine']?.dirty) &&
                 addressControl['addressLine']?.invalid
-              "
-            >
-              <label
-                for="addressLine"
-                class="text-danger fw-semibold position-absolute"
-              >
+              ">
+              <label for="addressLine" class="text-danger fw-semibold position-absolute">
                 Address Line is invalid
               </label>
             </div>
@@ -69,24 +43,13 @@
         <div class="col-md-4">
           <div class="input-box">
             <label for="city" class="required"> City </label>
-            <input
-              formControlName="city"
-              type="text"
-              id="city"
-              placeholder="City"
-            />
-            <div
-              class="errormsg"
-              *ngIf="
+            <input formControlName="city" type="text" id="city" placeholder="City" />
+            <div class="errormsg" *ngIf="
                 (addressControl['city']?.touched ||
                   addressControl['city']?.dirty) &&
                 addressControl['city']?.invalid
-              "
-            >
-              <label
-                for="city"
-                class="text-danger fw-semibold position-absolute"
-              >
+              ">
+              <label for="city" class="text-danger fw-semibold position-absolute">
                 City is invalid
               </label>
             </div>
@@ -95,24 +58,13 @@
         <div class="col-md-4 col-sm-6">
           <div class="input-box">
             <label for="State" class="required"> State </label>
-            <input
-              formControlName="state"
-              type="text"
-              id="State"
-              placeholder="State"
-            />
-            <div
-              class="errormsg"
-              *ngIf="
+            <input formControlName="state" type="text" id="State" placeholder="State" />
+            <div class="errormsg" *ngIf="
                 (addressControl['state']?.touched ||
                   addressControl['state']?.dirty) &&
                 addressControl['state']?.invalid
-              "
-            >
-              <label
-                for="State"
-                class="text-danger fw-semibold position-absolute"
-              >
+              ">
+              <label for="State" class="text-danger fw-semibold position-absolute">
                 State is invalid
               </label>
             </div>
@@ -121,24 +73,13 @@
         <div class="col-md-4 col-sm-6">
           <div class="input-box">
             <label for="zipCode" class="required"> Zipcode </label>
-            <input
-              formControlName="zipCode"
-              id="zipCode"
-              type="number"
-              placeholder="zipCode"
-            />
-            <div
-              class="errormsg"
-              *ngIf="
+            <input formControlName="zipCode" id="zipCode" type="number" placeholder="zipCode" />
+            <div class="errormsg" *ngIf="
                 (addressControl['zipCode']?.touched ||
                   addressControl['zipCode']?.dirty) &&
                 addressControl['zipCode']?.invalid
-              "
-            >
-              <label
-                for="yearBuilt"
-                class="text-danger fw-semibold position-absolute"
-              >
+              ">
+              <label for="yearBuilt" class="text-danger fw-semibold position-absolute">
                 Zipcode is invalid
               </label>
             </div>
@@ -147,25 +88,15 @@
         <div class="col-md-6">
           <div class="select-box">
             <label class="required"> Dwelling Unit Type </label>
-            <ng-select
-              [items]="dwellingUnitTypeOptions"
-              bindLabel="name"
-              [clearable]="true"
-              [closeOnSelect]="true"
-              bindValue="value"
-              placeholder="Dwelling Unit Type"
-              id="dwellingUnitType"
-              formControlName="dwellingUnitType"
-            >
+            <ng-select [items]="dwellingUnitTypeOptions" bindLabel="name" [clearable]="true" [closeOnSelect]="true"
+              bindValue="value" placeholder="Dwelling Unit Type" id="dwellingUnitType"
+              formControlName="dwellingUnitType">
             </ng-select>
-            <div
-              class="errormsg"
-              *ngIf="
+            <div class="errormsg" *ngIf="
                 (addressControl['dwellingUnitType']?.touched ||
                   addressControl['dwellingUnitType']?.dirty) &&
                 addressControl['dwellingUnitType']?.invalid
-              "
-            >
+              ">
               <label class="text-danger fw-semibold position-absolute">
                 Dwelling Unit Type is invalid
               </label>
@@ -175,25 +106,14 @@
         <div class="col-md-6">
           <div class="select-box">
             <label class="required"> Assessment Type </label>
-            <ng-select
-              [items]="assessmentType"
-              bindLabel="name"
-              [clearable]="true"
-              [closeOnSelect]="true"
-              bindValue="value"
-              placeholder="Assessment Type"
-              id="assessmentType"
-              formControlName="assessmentType"
-            >
+            <ng-select [items]="assessmentType" bindLabel="name" [clearable]="true" [closeOnSelect]="true"
+              bindValue="value" placeholder="Assessment Type" id="assessmentType" formControlName="assessmentType">
             </ng-select>
-            <div
-              class="errormsg"
-              *ngIf="
+            <div class="errormsg" *ngIf="
                 (addressControl['assessmentType']?.touched ||
                   addressControl['assessmentType']?.dirty) &&
                 addressControl['assessmentType']?.invalid
-              "
-            >
+              ">
               <label class="text-danger fw-semibold position-absolute">
                 Assessment Type is invalid
               </label>
