--- a/HEScoreMicro.UI/src/app/views/summary/summary.component.html
+++ b/HEScoreMicro.UI/src/app/views/summary/summary.component.html
@@ -1,75 +1,43 @@
 <div class="containter">
   <div
     class="overflow-x-auto border rounded-xl-4 rounded-md-3 rounded-2 p-xl-5 p-lg-4 p-md-3 p-2 mb-4 position-relative"
-    *ngIf="buildingCopy"
-    style="background-color: rgba(0, 0, 0, 0.089)"
-  >
+    *ngIf="buildingCopy" style="background-color: rgba(0, 0, 0, 0.089)">
     <h4>Summary Info:</h4>
-    <button
-      class="fw-bolder fs-2 ms-auto d-block position-absolute border-0 bg-transparent"
-      style="width: 30px; top: 0px; right: 10px"
-      (click)="buildingToggle = !buildingToggle"
-    >
+    <button class="fw-bolder fs-2 ms-auto d-block position-absolute border-0 bg-transparent"
+      style="width: 30px; top: 0px; right: 10px" (click)="buildingToggle = !buildingToggle">
       {{ buildingToggle ? "-" : "+" }}
     </button>
-    <ngx-json-viewer
-      [expanded]="buildingToggle"
-      [json]="buildingCopy"
-    ></ngx-json-viewer>
+    <ngx-json-viewer [expanded]="buildingToggle" [json]="buildingCopy"></ngx-json-viewer>
     <button class="bg-success btn-style mx-auto mt-4 mb-0" (click)="validate()">
       Validate
     </button>
   </div>
 </div>
-<div
-  class="overflow-x-auto border rounded-xl-4 rounded-md-3 rounded-2 p-xl-5 p-lg-4 p-md-3 p-2 mb-4 position-relative"
-  *ngIf="validationData"
-  style="background-color: rgba(0, 0, 0, 0.089)"
->
+<div class="overflow-x-auto border rounded-xl-4 rounded-md-3 rounded-2 p-xl-5 p-lg-4 p-md-3 p-2 mb-4 position-relative"
+  *ngIf="validationData" style="background-color: rgba(0, 0, 0, 0.089)">
   <h4>Validation Message:</h4>
-  <button
-    class="fw-bolder fs-2 ms-auto d-block position-absolute border-0 bg-transparent"
-    style="width: 30px; top: 0px; right: 10px"
-    (click)="validationToggle = !validationToggle"
-  >
+  <button class="fw-bolder fs-2 ms-auto d-block position-absolute border-0 bg-transparent"
+    style="width: 30px; top: 0px; right: 10px" (click)="validationToggle = !validationToggle">
     {{ validationToggle ? "-" : "+" }}
   </button>
-  <ngx-json-viewer
-    [expanded]="validationToggle"
-    [json]="validationData"
-  ></ngx-json-viewer>
+  <ngx-json-viewer [expanded]="validationToggle" [json]="validationData"></ngx-json-viewer>
   <div class="d-flex justify-content-center gap-3" *ngIf="validationStatus">
-    <button
-      class="bg-secondary btn-style mt-4 mb-0 bg-success"
-      (click)="clearOldPDF()"
-    >
+    <button class="bg-secondary btn-style mt-4 mb-0 bg-success" (click)="clearOldPDF()">
       Clear Old PDF
     </button>
-    <button
-      class="bg-primary btn-style mt-4 mb-0 bg-success"
-      (click)="generatePDF()"
-    >
+    <button class="bg-primary btn-style mt-4 mb-0 bg-success" (click)="generatePDF()">
       Generate PDF
     </button>
   </div>
 </div>
 <div
   class="overflow-x-auto border rounded-xl-4 rounded-md-3 rounded-2 p-xl-5 p-lg-4 p-md-3 p-2 mb-4 position-relative parentLoader"
-  *ngIf="PDFResponse || PDFLoader"
-  style="background-color: rgba(0, 0, 0, 0.089)"
->
+  *ngIf="PDFResponse || PDFLoader" style="background-color: rgba(0, 0, 0, 0.089)">
   <img src="assets/gif/loader.gif" class="loader" alt="" *ngIf="PDFLoader" />
   <h4 *ngIf="PDFResponse">Generation Response:</h4>
-  <button
-    class="fw-bolder fs-2 ms-auto d-block position-absolute border-0 bg-transparent"
-    style="width: 30px; top: 0px; right: 10px"
-    (click)="pdfToggle = !pdfToggle"
-  >
+  <button class="fw-bolder fs-2 ms-auto d-block position-absolute border-0 bg-transparent"
+    style="width: 30px; top: 0px; right: 10px" (click)="pdfToggle = !pdfToggle">
     {{ pdfToggle ? "-" : "+" }}
   </button>
-  <ngx-json-viewer
-    *ngIf="PDFResponse"
-    [expanded]="pdfToggle"
-    [json]="PDFResponse"
-  ></ngx-json-viewer>
+  <ngx-json-viewer *ngIf="PDFResponse" [expanded]="pdfToggle" [json]="PDFResponse"></ngx-json-viewer>
 </div>
